# test-gui

./: configure.ac  skin.py
data/: keymap.xml  menu.xml  radio.mvi
data/skin_default/spinner/: Makefile.am
lib/gui/: ewindow.h
lib/python/Components/: VolumeControl.py  config.py
lib/python/Components/Converter/: Makefile.am  PanelAlwaysTrue.py  PanelConnection.py  PanelSpaceInfo.py
lib/python/Components/Renderer/: Makefile.am  SdgvolumeText.py
lib/python/Plugins/: Makefile.am
lib/python/Plugins/Extensions/GreekStreamTV/: __init__.pyo
lib/python/Plugins/Satdreamgr/: Makefile.am
lib/python/Plugins/Satdreamgr/Hardware/: Makefile.am  plugin.py
lib/python/Plugins/Satdreamgr/Manipulate/: FileList.py  Makefile.am  plugin.py
lib/python/Plugins/Satdreamgr/RemoveOPKG/: Makefile.am  plugin.py
lib/python/Plugins/Satdreamgr/SDGBackup/: Makefile.am  plugin.py
lib/python/Plugins/Satdreamgr/SettingsSatDreamGr/: Makefile.am  SDG_ActionBox.py  SDG_Common.py  SDG_Deflate.py  SDG_Morpheus.py  SDG_Satdreamgr.py  SDG_Settings.py  SDG_SettingsList.py  SDG_Vhannibal.py  plugin.py
lib/python/Plugins/Satdreamgr/SettingsSatDreamGr/images/: Makefile.am
lib/python/Plugins/Satdreamgr/SettingsSatDreamGr/po/: Makefile.am
lib/python/Plugins/Satdreamgr/SettingsSatDreamGr/po/el/: Makefile.am
lib/python/Plugins/Satdreamgr/SettingsSatDreamGr/po/el/LC_MESSAGES/: Makefile.am
lib/python/Plugins/Satdreamgr/SwapManager/: Makefile.am  SystemToolsConsole.py  SystemToolsText.py  plugin.py
lib/python/Screens/: About.py  ChannelSelection.py  InfoBarGenerics.py  Screen.py  Wizard.py
(+17 files in other folders)
