installdir = $(pkglibdir)/python/Plugins/Satdreamgr/SettingsSatDreamGr

SUBDIRS = images po

install_PYTHON =	\
	__init__.py \
	plugin.py \
        SDG_ActionBox.py \
        SDG_Common.py \
        SDG_Deflate.py \
        SDG_Morpheus.py \
        SDG_Satdreamgr.py \
        SDG_Settings.py \
        SDG_SettingsList.py \
        SDG_Vhannibal.py 
